--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "element-ui": "2.3.2",
     "file-saver": "1.3.3",
     "font-awesome": "4.7.0",
+    "iview": "^3.1.5",
     "js-cookie": "2.2.0",
     "jsonlint": "1.6.2",
     "jszip": "3.1.5",
@@ -62,6 +63,7 @@
     "babel-eslint": "8.0.3",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
     "babel-loader": "7.1.2",
+    "babel-plugin-import": "^1.11.0",
     "babel-plugin-syntax-jsx": "6.18.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-transform-vue-jsx": "3.5.0",
